<?xml version="1.0"?>
<package format="2">
  <name>husky_velodyne_dwa_nav</name>
  <version>0.0.1</version>
  <description>Navigation package for Husky with Velodyne LiDAR using DWA planner</description>
  
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base</depend>
  <depend>costmap_2d</depend>
  <depend>dwa_local_planner</depend>
  <depend>husky_control</depend>
  <depend>velodyne_pointcloud</depend>
  <depend>pcl_ros</depend>
  
  <export>
  </export>
</package>