<?xml version="1.0"?>
<package format="2">
  <name>husky_dwa_navigation</name>
  <version>0.1.0</version>
  <description>Navigation package for Husky with Velodyne LiDAR using DWA planner</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>move_base</depend>
  <depend>dwa_local_planner</depend>
  <depend>husky_control</depend>
  <depend>husky_custom_gazebo</depend>
  <depend>husky_custom_description</depend>
  <depend>pointcloud_to_laserscan</depend>
  <depend>pcl_ros</depend>
  <depend>nodelet</depend>
  <depend>costmap_2d</depend>
  <depend>range_sensor_layer</depend>
  <depend>carrot_planner</depend>

  <export>
  </export>
</package>